--- a/Dockerfile.webserver
+++ b/Dockerfile.webserver
@@ -1,7 +1,8 @@
 FROM python:3.6-alpine
 
 ADD app /app/app
-ADD temp /app/temp
+# ADD temp /app/temp
+RUN mkdir /app/temp
 
 ENV CELERY_BROKER_URL redis://redis:6379/0
 ENV CELERY_RESULT_BACKEND redis://redis:6379/0
